--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
             <version>42.7.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.6.0.Final</version>
+        </dependency>
+
     </dependencies>
 
 
