--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
             <version>6.6.0.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>6.1.12</version>
+        </dependency>
+
     </dependencies>
 
 
